--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 	},
 	"dependencies": {
 		"@crxjs/vite-plugin": "^1.0.14",
+		"clsx": "^2.1.0",
 		"dayjs": "^1.11.10",
 		"framer-motion": "^11.1.7",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.7.0",
